--- a/default.project.json
+++ b/default.project.json
@@ -1,5 +1,5 @@
 {
-    "name": "MonsterLabTycoon",
+    "name": "monster_lab_tycoon",
     "tree": {
         "$className": "DataModel",
         "ReplicatedStorage": {
